			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2714 2005/01/12 06:06:09 suz Exp $

<200501>
2005-01-12  suz@crl.hitachi.co.jp
	* kame/kame/dhcp6: implemented stateful non-temporary address 
	  assignment.

2005-01-10  suz@crl.hitachi.co.jp
	* kame/sys/netkey/key.c: fixed an unexpected addr/port matching failure
	  in SA management.

2005-01-07  suz@crl.hitachi.co.jp
	* kame/sys/netinet6/{udp6_var.h, udp6_usrreq.c}: fixed a NetBSD
	  kernel crash by referring to an uninitialized variable.

Wed Jan  5 07:58:00 UTC 2005  itojun@iijlab.net
	* switch NetBSD base version to 2.0.  todo: dccp, sctp, pf, altq

2005-01-01  suz@crl.hitachi.co.jp
	* kame/sys/netinet6/mldv2.c: fixed a kernel crash by an MLDv2
	  Query (Multicast Address and Source Specific Query).