@@ -1,7 +1,10 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2714 2005/01/12 06:06:09 suz Exp $
+$KAME: CHANGELOG,v 1.2715 2005/01/15 01:37:33 suz Exp $
 
 <200501>
+2005-01-15  suz@crl.hitachi.co.jp
+	* kame/sys/netinet6/icmp6.c: fixed an ICMPv6 Redirect message corruption
+
 2005-01-12  suz@crl.hitachi.co.jp
 	* kame/kame/dhcp6: implemented stateful non-temporary address 
 	  assignment.
